# prep_develop_skeleton

./: AUTHORS  COPYING  ChangeLog  Makefile.in  NEWS  README  README.md  configure  configure.ac
share/: Makefile.am  Makefile.in  prep_develop_skeleton.txt
share/samples/: configure.ac.libpopt
share/template/top/trunk/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
share/template/top/trunk/include/: Makefile.am
share/template/top/trunk/include/projname/: projname.h
share/template/top/trunk/share/: Makefile.am  projname.txt
share/template/top/trunk/src/: Makefile.am  libprojname.cc  projname.cc
