bin_PROGRAMS   = projname

projname_SOURCES  = projname.cc
projname_LDADD    = libprojname.la -lm
projname_LLDFLAGS = 
projname_CFLAGS   = 
projname_FCFLAGS  = 
projname_CXXFLAGS = 

lib_LTLIBRARIES = libprojname.la
libprojname_la_SOURCES = libprojname.cc 

libprojname_la_CFLAGS   = 
libprojname_la_FCFLAGS  = 
libprojname_la_CXXFLAGS = 
